[package]
name = "class"
version = "0.1.0"
edition = "2021"
authors = ["Chris Pecunies, <clp@clp.is"]
readme = "README.md"
license = "LICENSEd"
default-run = "class-bin"

[lib]
name = "class"
doctest = false
path = "src/lib.rs"

[[bin]]
name = "class-bin"
path = "src/bin/class.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytes = "1.1.0"
dashmap = { version = "5.2.0", features = ["serde", "rayon"] }
env_logger = "0.9.0"
log = { version = "0.4.16", features = ["serde"] }
owo-colors = "3.4.0"
anyhow = { version = "1.0.57", features = ["backtrace"] }
serde = { version = "1.0.136", features = ["derive"] }


[debug]
incremental = true

